<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_phone"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/icon_user"/>

    <EditText
        android:id="@+id/et_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/iv_phone"
        android:hint="@string/et_phoneNumber_value"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/iv_password"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_below="@+id/iv_phone"
        android:src="@drawable/icon_password"/>

    <EditText
        android:id="@+id/et_passWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_phoneNumber"
        android:layout_toRightOf="@+id/iv_password"
        android:hint="@string/et_passWord_value"
        android:inputType="textPassword"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_passWord"
        android:gravity="right"
        android:text="@string/forget_value"
        android:textColor="@color/blue"
        android:textSize="15sp"/>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forget"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_value"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register_value"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/lg_progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_layout"
        android:visibility="gone"/>


</RelativeLayout>