<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ui.MainActivity">

    <include layout="@layout/activity_toolbar"/>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_sec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_sec_value"
                android:textColor="@android:color/darker_gray"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/thirdActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/thirdActivity_value"
                android:textColor="@android:color/darker_gray"
                android:textSize="25sp"/>

            <LinearLayout
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_get"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:text="@string/btn_get_value"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="25sp"/>

                <Button
                    android:id="@+id/btn_post"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="1"
                    android:text="@string/btn_post_value"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="25sp"/>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </ListView>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/left_menu"
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:orientation="vertical"/>

    </android.support.v4.widget.DrawerLayout>

</LinearLayout>
